// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview nhs app form renders matches error snapshot 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-back-link"
    >
      <a
        class="nhsuk-back-link__link nhsuk-u-margin-bottom-7 nhsuk-u-margin-left-3"
        href="/templates/edit-nhs-app-template/undefined"
      >
        <svg
          aria-hidden="true"
          class="nhsuk-icon nhsuk-icon__chevron-left"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"
          />
        </svg>
        Go back
      </a>
    </div>
    <div
      class="nhsuk-grid-column-two-thirds"
    >
      <div
        aria-labelledby="error-summary-title"
        class="nhsuk-error-summary"
        role="alert"
        tabindex="-1"
      >
        <h2
          class="nhsuk-error-summary__title"
          data-testid="error-summary"
          id="error-summary-title"
        >
          There is a problem
        </h2>
        <ul
          class="nhsuk-list nhsuk-error-summary__list"
        >
          <li>
            <a
              href="#reviewNHSAppTemplateAction"
            >
              Select an option
            </a>
          </li>
        </ul>
      </div>
      <h1
        class="review__heading"
        data-testid="preview-message__heading"
      >
        <span
          class="nhsuk-caption-l"
          data-testid="preview-message__heading-caption"
        >
          NHS App message template
        </span>
        test-template-nhs app
      </h1>
      <details
        class="nhsuk-details"
        data-testid="preview-message-details"
      >
        <summary
          class="nhsuk-details__summary"
          data-testid="preview-message-details__heading"
        >
          <span
            class="nhsuk-details__summary-text"
          >
            Who your NHS App message will be sent from
          </span>
        </summary>
        <div
          class="nhsuk-details__text"
          data-testid="preview-message-details__text"
        >
          <p>
            Set your NHS App message sender name during onboarding.
          </p>
          <p>
            If you need to set up a different NHS App message sender name for other messages, contact our onboarding team.
          </p>
        </div>
      </details>
      <div
        class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
      >
        <div
          class="preview"
        >
          <div
            class="nhsuk-grid-row preview__row"
          >
            <div
              class="nhsuk-grid-column-one-third preview__col"
            >
              <div
                class="preview__col_heading"
                data-testid="preview__heading-0"
                id="preview-heading-message"
              >
                Message
              </div>
            </div>
            <div
              class="nhsuk-grid-column-two-thirds col"
            >
              <div
                class="preview__col_content"
                data-testid="preview__content-0"
                id="preview-content-message"
              />
            </div>
          </div>
        </div>
      </div>
      <form
        action="/action"
      >
        <input
          name="form-id"
          readonly=""
          type="hidden"
          value="preview-nhs-app-template"
        />
        <div
          class="nhsuk-form-group nhsuk-form-group--error"
        >
          <fieldset
            class="nhsuk-fieldset"
          >
            <legend
              class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m"
              data-testid="reviewNHSAppTemplateAction-form__legend"
            >
              What would you like to do next with this template?
            </legend>
            <div
              class="nhsuk-form-group nhsuk-form-group--error"
            >
              <span
                class="nhsuk-error-message"
                id="reviewNHSAppTemplateAction-error-message"
              >
                <span
                  class="nhsuk-u-visually-hidden"
                >
                  Error: 
                </span>
                Select an option
              </span>
              <div
                aria-describedby="reviewNHSAppTemplateAction--error-message"
                class="nhsuk-radios"
                id="reviewNHSAppTemplateAction"
              >
                <div
                  class="nhsuk-radios__item"
                >
                  <input
                    class="nhsuk-radios__input"
                    data-testid="nhsapp-edit-radio"
                    id="reviewNHSAppTemplateAction-nhsapp-edit"
                    name="reviewNHSAppTemplateAction"
                    type="radio"
                    value="nhsapp-edit"
                  />
                  <label
                    class="nhsuk-label nhsuk-radios__label"
                    for="reviewNHSAppTemplateAction-nhsapp-edit"
                    id="reviewNHSAppTemplateAction-nhsapp-edit--label"
                  >
                    Edit
                  </label>
                </div>
                <div
                  class="nhsuk-radios__item"
                >
                  <input
                    class="nhsuk-radios__input"
                    data-testid="nhsapp-submit-radio"
                    id="reviewNHSAppTemplateAction-nhsapp-submit"
                    name="reviewNHSAppTemplateAction"
                    type="radio"
                    value="nhsapp-submit"
                  />
                  <label
                    class="nhsuk-label nhsuk-radios__label"
                    for="reviewNHSAppTemplateAction-nhsapp-submit"
                    id="reviewNHSAppTemplateAction-nhsapp-submit--label"
                  >
                    Submit
                  </label>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <button
          aria-disabled="false"
          class="nhsuk-button"
          data-testid="submit-button"
          id="preview-nhs-app-template-submit-button"
          type="submit"
        >
          Continue
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Preview nhs app form renders matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-back-link"
    >
      <a
        class="nhsuk-back-link__link nhsuk-u-margin-bottom-7 nhsuk-u-margin-left-3"
        href="/templates/edit-nhs-app-template/undefined"
      >
        <svg
          aria-hidden="true"
          class="nhsuk-icon nhsuk-icon__chevron-left"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"
          />
        </svg>
        Go back
      </a>
    </div>
    <div
      class="nhsuk-grid-column-two-thirds"
    >
      <h1
        class="review__heading"
        data-testid="preview-message__heading"
      >
        <span
          class="nhsuk-caption-l"
          data-testid="preview-message__heading-caption"
        >
          NHS App message template
        </span>
        test-template-nhs app
      </h1>
      <details
        class="nhsuk-details"
        data-testid="preview-message-details"
      >
        <summary
          class="nhsuk-details__summary"
          data-testid="preview-message-details__heading"
        >
          <span
            class="nhsuk-details__summary-text"
          >
            Who your NHS App message will be sent from
          </span>
        </summary>
        <div
          class="nhsuk-details__text"
          data-testid="preview-message-details__text"
        >
          <p>
            Set your NHS App message sender name during onboarding.
          </p>
          <p>
            If you need to set up a different NHS App message sender name for other messages, contact our onboarding team.
          </p>
        </div>
      </details>
      <div
        class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
      >
        <div
          class="preview"
        >
          <div
            class="nhsuk-grid-row preview__row"
          >
            <div
              class="nhsuk-grid-column-one-third preview__col"
            >
              <div
                class="preview__col_heading"
                data-testid="preview__heading-0"
                id="preview-heading-message"
              >
                Message
              </div>
            </div>
            <div
              class="nhsuk-grid-column-two-thirds col"
            >
              <div
                class="preview__col_content"
                data-testid="preview__content-0"
                id="preview-content-message"
              />
            </div>
          </div>
        </div>
      </div>
      <form
        action="/action"
      >
        <input
          name="form-id"
          readonly=""
          type="hidden"
          value="preview-nhs-app-template"
        />
        <div
          class="nhsuk-form-group"
        >
          <fieldset
            class="nhsuk-fieldset"
          >
            <legend
              class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m"
              data-testid="reviewNHSAppTemplateAction-form__legend"
            >
              What would you like to do next with this template?
            </legend>
            <div
              class="nhsuk-form-group"
            >
              <div
                class="nhsuk-radios"
                id="reviewNHSAppTemplateAction"
              >
                <div
                  class="nhsuk-radios__item"
                >
                  <input
                    class="nhsuk-radios__input"
                    data-testid="nhsapp-edit-radio"
                    id="reviewNHSAppTemplateAction-nhsapp-edit"
                    name="reviewNHSAppTemplateAction"
                    type="radio"
                    value="nhsapp-edit"
                  />
                  <label
                    class="nhsuk-label nhsuk-radios__label"
                    for="reviewNHSAppTemplateAction-nhsapp-edit"
                    id="reviewNHSAppTemplateAction-nhsapp-edit--label"
                  >
                    Edit
                  </label>
                </div>
                <div
                  class="nhsuk-radios__item"
                >
                  <input
                    class="nhsuk-radios__input"
                    data-testid="nhsapp-submit-radio"
                    id="reviewNHSAppTemplateAction-nhsapp-submit"
                    name="reviewNHSAppTemplateAction"
                    type="radio"
                    value="nhsapp-submit"
                  />
                  <label
                    class="nhsuk-label nhsuk-radios__label"
                    for="reviewNHSAppTemplateAction-nhsapp-submit"
                    id="reviewNHSAppTemplateAction-nhsapp-submit--label"
                  >
                    Submit
                  </label>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <button
          aria-disabled="false"
          class="nhsuk-button"
          data-testid="submit-button"
          id="preview-nhs-app-template-submit-button"
          type="submit"
        >
          Continue
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
